# chess-bit

./: CMakeLists.txt  README.md
assets/textures/: CREDITS
include/: Animatable.hpp  Animated.hpp  AnimatedValue.hpp  Board.hpp  Color.hpp  Easings.hpp  Game.hpp  Matrix.hpp  Move.hpp  Piece.hpp  ResourceManager.hpp  Tile.hpp  debug.hpp
include/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Tower.hpp
src/: Animatable.cpp  Animated.cpp  Board.cpp  Board.hpp  Cell.hpp  Game.cpp  Game.hpp  Move.hpp  Piece.cpp  Piece.hpp  ResourceManager.cpp  ResourceManager.hpp  Tile.cpp  debug.hpp  main.cpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Tower.cpp  Tower.hpp
